# macroni

./: .gitignore  README.md  db.py  directory.py  errorscreen.py  main.py  newtask.py  newtask.tcss  pyproject.toml  tasklist.py  validation.py
macroni/: main.py
macroni/backend/: db.py  dependency_handler.py  runscript.py  scheduler.py
macroni/backend/workers/: battery.py  folder.py  interval.py  keyboard.py  startup.py
macroni/ui/: directory.py  errorscreen.py  message.py  newtask.py  tasklist.py  validation.py
