[project]
name = "macroni"
version = "0.1.0"
description = "A terminal-based automation engine with Textual UI and async workers."

requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "textual>=0.42.0",
    "psutil>=5.9.0",
    "keyboard>=0.13.5",
    "pywin32>=306",
    "winshell>=0.6",
]

# For console entrypoint: running `macroni` starts the app
[project.scripts]
macroni = "macroni.main:main"
